[gd_scene load_steps=9 format=3 uid="uid://bnqe0q2ap1fmg"]

[ext_resource type="PackedScene" uid="uid://b68vs0af4e7hi" path="res://scenes/entities/entity.tscn" id="1_tv4re"]
[ext_resource type="Script" path="res://scenes/entities/monster.gd" id="2_qlx5b"]
[ext_resource type="Texture2D" uid="uid://qu4x05j28eh7" path="res://graphics/entities/attack.png" id="2_x3uir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cl07h"]
size = Vector2(38, 93)

[sub_resource type="Animation" id="Animation_bvvrh"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4b80a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_05f38"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnimd"]
_data = {
"RESET": SubResource("Animation_4b80a"),
"attack": SubResource("Animation_05f38"),
"idle": SubResource("Animation_bvvrh")
}

[node name="Monster" instance=ExtResource("1_tv4re")]
collision_layer = 4
collision_mask = 16
script = ExtResource("2_qlx5b")
limits = Vector2i(0, 0)

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(-9, -0.5)
shape = SubResource("RectangleShape2D_cl07h")

[node name="AttackTimer" type="Timer" parent="Timers" index="0"]
one_shot = true
autostart = true

[node name="MoveTimer" type="Timer" parent="Timers" index="1"]
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="." index="2"]
position = Vector2(-22, -1)
texture = ExtResource("2_x3uir")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_mnimd")
}
autoplay = "attack"

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
